Added Search, Search Button w/ styling, and FA.

--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -4,5 +4,12 @@
         <div class="brand my-1">
             <h1>Angular eStore</h1>
         </div>
+
+        <!-- 'p-0' to remove padding from all sides, 'my-4' to set top and bottom margin to $spacer x 1.5 -->
+        <!-- 'w-50' width 50%, 'h-25' to set height to 50% -->
+        <div class = 'p-0 my-4 w-50 h-25 bg-white'>
+            <input class="form-control search-box" placeholder="Search..."/>
+            <button class="search-button"><fa-icon [icon] = "faSearch"></fa-icon></button>
+        </div>
     </div>
 </div>
