--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -8,6 +8,12 @@
         <!-- 'p-0' to remove padding from all sides, 'my-4' to set top and bottom margin to $spacer x 1.5 -->
         <!-- 'w-50' width 50%, 'h-25' to set height to 50% -->
         <div class = 'p-0 my-4 w-50 h-25 bg-white'>
+            <!-- Creation of our Dropdown menu -->
+            <select class = 'dropdown p-0 m-0'>
+                <option>Men</option>
+                <option>Women</option>
+                <option>Kids</option>
+            </select>
             <input class="form-control search-box" placeholder="Search..."/>
             <button class="search-button"><fa-icon [icon] = "faSearch"></fa-icon></button>
         </div>
