--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -17,5 +17,12 @@
             <input class="form-control search-box" placeholder="Search..."/>
             <button class="search-button"><fa-icon [icon] = "faSearch"></fa-icon></button>
         </div>
+
+        <!-- Addition of our login container which contains our buttons for login and register -->
+        <div class="login-container p-0">
+            <fa-icon class="user-icon" [icon] = "faUserCircle"></fa-icon>
+            <h5><a href="#">Sign in</a></h5> / <h5><a href="#">Register</a></h5>
+        </div>
+
     </div>
 </div>
