Added Wishlist and Shopping Cart buttons w/style.

--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -24,5 +24,20 @@
             <h5><a href="#">Sign in</a></h5> / <h5><a href="#">Register</a></h5>
         </div>
 
+        <!-- Addition of our Wishlist and Shopping Cart  -->
+        <div class = 'cart-wishlist'>
+            <ul class = 'p-0'>
+
+                <!-- Wishlist Heart Icon -->
+                <li class="list-item">
+                    <fa-icon [icon]="faHeart"></fa-icon>
+                </li>
+                <!-- Shopping Cart Item -->
+                <li class = 'list-item'>
+                    <fa-icon [icon]="faShoppingCart"></fa-icon>
+                </li>
+            </ul>
+        </div>
+
     </div>
 </div>
