Added Categories w/styling below our Header.

--- a/src/app/header/header.component.scss
+++ b/src/app/header/header.component.scss
@@ -69,6 +69,7 @@ $search-bar-border: none;
     }
 }
 
+// Over here, we have the styling for our wishlist and shopping cart area
 .cart-wishlist {
     width: 8%;
     margin-top: 1.7em;
