Added and styled 'hover' and 'after' transitions.

--- a/src/app/categorynav/categorynav.component.scss
+++ b/src/app/categorynav/categorynav.component.scss
@@ -1,4 +1,5 @@
 
+// Contains styling for our container including our various categories
 .navigation-container {
     max-width: 100%;
     background-color: #1f1e1e;
@@ -18,5 +19,25 @@
         height: 1.8em;
         font-size: 0.9em;
         font-weight: 700;
+
+        // After hovering on the category navigation, we are adding a red transtion
+        // The red transtion comes when we hover and smoothly goes after curson is taken away.
+        &::after {
+            content: '';
+            display: block;
+            bottom: 0;
+            left: 0;
+            height: 0.2em;
+            background-color: red;
+            transform: scaleX(0);
+            transition-property: transform;
+            transition-duration: 0.2s;
+        }
+
+        &:hover {
+            &::after{
+                transform: scaleX(1.2);
+            }
+        }
     }
 }
