Added comments to 'home.component.html'

--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -1,2 +1,5 @@
+<!-- We have changed the hierarchy of our app-header and app-category from the root of our app -->
+<!-- to a new module Home. App-header and app-category are now children of our parent Module Home-->
+
 <app-header></app-header>
 <app-categorynav></app-categorynav>
