--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -3,3 +3,12 @@
 
 <app-header></app-header>
 <app-categorynav></app-categorynav>
+
+<!-- Added this divison in order to make our Sidebar towards the left and to make it compact  -->
+<div class="container-fluid">
+    <div class="row">
+        <div class="col-lg-2 col-md-3 col-sm-">
+            <app-sidenavigation></app-sidenavigation>
+        </div>
+    </div>
+</div>
