--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -7,8 +7,11 @@
 <!-- Added this divison in order to make our Sidebar towards the left and to make it compact  -->
 <div class="container-fluid">
     <div class="row">
-        <div class="col-lg-2 col-md-3 col-sm-">
+        <div class="col-lg-2 col-md-3 col-sm-4">
             <app-sidenavigation></app-sidenavigation>
+        </div>
+        <div class="col-lg-10 col-md-9 col-sm-8">
+            <app-products></app-products>
         </div>
     </div>
 </div>
