--- a/src/app/home/components/products/products.component.html
+++ b/src/app/home/components/products/products.component.html
@@ -1,10 +1,21 @@
-<div>
-    <div class="mx-5 p-3 col-lg-3 col-md-6">
-      <div><img src="../../../../assets/images/shop-1.jpg" /></div>
-      <div>
+
+<!-- This is where we are adding products to our eStore -->
+
+<!-- This is our main product container -->
+<div class="main-product-container">
+
+    <!-- Product Card Class -->
+    <div class="mx-4 p-3 product-card">
+      <div class="product-image-container">
+        <img src="../../../../assets/images/shop-1.jpg" />
+      </div>
+      <!-- Product Info Class -->
+      <div class="product-info">
         <h5><a href="#">Jacket</a></h5>
-        <p>$45</p>
+        <!-- Product Price Class -->
+        <p class="product-price">$45</p>
       </div>
     </div>
-  </div>
+</div>
+  
   
