Product Fetch Service + added more products.

--- a/src/app/home/components/products/products.component.html
+++ b/src/app/home/components/products/products.component.html
@@ -5,15 +5,17 @@
 <div class="main-product-container">
 
     <!-- Product Card Class -->
-    <div class="mx-4 p-3 product-card">
+    <div *ngFor="let product of products"class="mx-5 p-3 product-card">
       <div class="product-image-container">
-        <img src="../../../../assets/images/shop-1.jpg" />
+        <img [src]="'../../../../assets/images/' + product.product_img + '.jpg'"/>
       </div>
       <!-- Product Info Class -->
       <div class="product-info">
-        <h5><a href="#">Jacket</a></h5>
+        <!-- We have replaced manual names with products.'' as we have created a service for fetching our products  -->
+        <h5><a href="#">{{product.product_name}}</a></h5>
         <!-- Product Price Class -->
-        <p class="product-price">$45</p>
+        <!-- We have replaced manual names with products.'' as we have created a service for fetching our products  -->
+        <p class="product-price">{{product.price | currency}}</p>
       </div>
     </div>
 </div>
