--- a/src/app/home/components/header/header.component.scss
+++ b/src/app/home/components/header/header.component.scss
@@ -10,6 +10,7 @@ $search-bar-border: none;
 .header {
     max-width: 100%;
     box-shadow: 5px 5px 20px gray;
+    overflow: hidden;
 }
 
 // Over here, we are styling our Brand which is our Store heading.
