--- a/src/app/home/components/categorynav/categorynav.component.html
+++ b/src/app/home/components/categorynav/categorynav.component.html
@@ -3,9 +3,9 @@
 
 <div class = "navigation-container">
     <ul>
-        <li><a href="#">Men</a></li>
-        <li><a href="#">Women</a></li>
-        <li><a href="#">Kids</a></li>
-        <li><a href="#">Best Offers</a></li>
+        <li><a href="javascript:void(0)">Home</a></li>
+        <li *ngFor="let category of categories">
+          <a href="javascript:void(0)">{{ category.category }}</a>
+        </li>
     </ul>
 </div>
