--- a/src/app/home/components/categorynav/categorynav.component.html
+++ b/src/app/home/components/categorynav/categorynav.component.html
@@ -4,7 +4,10 @@
 <div class = "navigation-container">
     <ul>
         <li><a href="javascript:void(0)">Home</a></li>
-        <li *ngFor="let category of categories">
+        <!-- We have added Async pipe -->
+        <!-- Async pipe will automatically subscribe to the observable topLevelCategories -->
+        <!-- and it unsubscribes from it when the component gets destroyed -->
+        <li *ngFor="let category of categoryStore.topLevelCategories$ | async">
           <a href="javascript:void(0)">{{ category.category }}</a>
         </li>
     </ul>
