Removed the static drop-down menu.

--- a/src/app/home/components/header/header.component.html
+++ b/src/app/home/components/header/header.component.html
@@ -10,9 +10,11 @@
         <div class = 'p-0 my-4 w-50 h-25 bg-white'>
             <!-- Creation of our Dropdown menu -->
             <select class = 'dropdown p-0 m-0'>
-                <option>Men</option>
-                <option>Women</option>
-                <option>Kids</option>
+                 <!-- We have added Async pipe -->
+                <!-- Async pipe will automatically subscribe to the observable topLevelCategories -->
+                <!-- and it unsubscribes from it when the component gets destroyed -->
+                <option *ngFor='let category of categoryStore.topLevelCategories$ | async '>
+                {{category.category}}</option>
             </select>
             <input class="form-control search-box" placeholder="Search..."/>
             <button class="search-button"><fa-icon [icon] = "faSearch"></fa-icon></button>
@@ -27,7 +29,6 @@
         <!-- Addition of our Wishlist and Shopping Cart  -->
         <div class = 'cart-wishlist'>
             <ul class = 'p-0'>
-
                 <!-- Wishlist Heart Icon -->
                 <li class="list-item">
                     <fa-icon [icon]="faHeart"></fa-icon>
