--- a/src/styles.scss
+++ b/src/styles.scss
@@ -7,7 +7,7 @@
         bottom: 0;
         left: 0;
         height: 0.2em;
-        background-color:red;
+        background-color: orange;
         transform: scaleX(0);
         transition-property: transform;
         transition-duration: 0.2s;
