Add all the products to our store dynamically.

--- a/src/app/home/components/products/products.component.html
+++ b/src/app/home/components/products/products.component.html
@@ -3,7 +3,8 @@
 <!-- This is our main product container -->
 <div class="main-product-container">
   <!-- Product Card Class -->
-  <div *ngFor="let product of products" class="mx-5 p-3 product-card">
+  <!-- Opens the observable, gets the products and then unsubscribes from the observable once the comp is destroyed -->
+  <div *ngFor="let product of productsStore.products$ | async" class="mx-5 p-3 product-card">
     <div class="product-image-container">
       <img [src]="'../../../../assets/images/' + product.product_img"/>
     </div>
