--- a/src/app/home/components/categorynav/categorynav.component.html
+++ b/src/app/home/components/categorynav/categorynav.component.html
@@ -8,7 +8,7 @@
         <!-- Async pipe will automatically subscribe to the observable topLevelCategories -->
         <!-- and it unsubscribes from it when the component gets destroyed -->
         <li *ngFor="let category of categoryStore.topLevelCategories$ | async">
-          <a href="javascript:void(0)">{{ category.category }}</a>
+          <a (click)="onCategoryClick(category)">{{ category.category }}</a>
         </li>
     </ul>
 </div>
